@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 3238 RMD160 02898b3b01791a04c7cca155c34107c2a8186bc8 SHA1 fbbfd7a19e4f450ec30e4041a1380540f2241873 SHA256 6e70835080004ea7f181f404fe8dfb570f968deed1daee954bb911dc91fff361
-MISC ChangeLog 853 RMD160 46867c7719fa573960dfea1ec002fe53c914d4b8 SHA1 e82857e4307e05fa12f0a1315f3d8bd82749c04a SHA256 e3d364c222f02510b5c7a434f882503d38b3726d02833da50a2962bacd44ce72
+EBUILD notmuch-9999.ebuild 2681 RMD160 1ac3cb8df43c8e00a86119f701d3d79f64b933b2 SHA1 8030b1a123fdd5212de2b2741f7ee65cf2c4476d SHA256 de72e1ae46f93ce24f2ae723aef0c5a55e282e0988131eb6377bee38cce186f3
+MISC ChangeLog 1025 RMD160 d30a10d0e6a254d831158aadfbe4feb39e0e0b4e SHA1 21ab39e3cfc6ca772f5f7b6f526857a2d53d6b11 SHA256 ac1700391274e2097550525cbbee9d763d61a668d463575e64366cdae25f2673
 MISC metadata.xml 1003 RMD160 12fa19220fd58eade62c7aafc6a3c2bf5adb6ca5 SHA1 8be789b19b3140dc24694d5c535a7d8a4e8c4b0a SHA256 48f0e1b14cf9bd31f53f6bb481570ec1f067308e067913edbcea50a986b875bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPQ/k9AAoJEPATRTHh2/q1FUoH/iwehtyvI0sUUrMCRuScECPJ
-17nzMGZXP1IZYzH1c0cbGFhdbCSmqLKLF7cD/ghADxPZWvUYrwCGNuCZY56MaYp0
-YMOnOqYE4FyrQ5b5X2OJL4Ml1oi8XVxa75RNTu91ZUITFdA9tjDkb7E2RtA+MyiC
-dfQJ8DNxJ18EkvA3PYvPm9crPZ6UZBpidaKfV0Bdet0khwCFaR6O6WvC77ZQI1a6
-lyMTGp24A7QlyOHCUwwp7ol2WYKRbM+fFCoDdVnD8zJ+2M2nUSpfdS2vL07+ZThi
-Gu8wsIsQAPQvZp/k6iBn10ZzMZ+b4kkV28tu01397S2oCMVk6BWGNjm6effdJTY=
-=iJHh
+iQEcBAEBAgAGBQJPUIzQAAoJEPATRTHh2/q1UnAH/3+EEUcmudgd928NhWnX+iIb
+JTk0y27V4Q0vp4J3Ro/KDFgQV5/9lNXhCWbrTwq8IfeKe9l3rc5MLl8kDPEqgmZa
+xO7YoQooWcGZ1L8RRDWCmZGvsVsym2G3vobFYAnl9felLPUXQeM/1ecKH9VvCrv9
+/WrjRZl23/RChs/hD6UmcqnFpcAKHQ57XHMY6hNr23YWXSO+9BZX4weOAm67I7bi
+A8RqAFCH/I+AtrwjB7y+L0bwbG4S5ApvEO4w4SjFXOwyOkIOHPlSdmpqSx4ViazF
+hGhUcPNtGn2keJ0S4Lo3n86+5rJ/ua06nDhqRUwoMVznp9iScbpMqv0WB1K3b9M=
+=UDBe
 -----END PGP SIGNATURE-----
