@@ -7,8 +7,6 @@ EAPI=4
 PYTHON_DEPEND="python? 2:2.6"
 SUPPORT_PYTHON_ABIS="1"
 RESTRICT_PYTHON_ABIS="2.[45] 3.*"
-RUBY="/usr/bin/ruby18"
-RDOC="/usr/bin/rdoc18"
 
 inherit elisp-common distutils git-2
 
@@ -19,19 +17,18 @@ EGIT_REPO_URI="git://git.notmuchmail.org/git/notmuch"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS=""
-REQUIRED_USE="test? ( crypt emacs )"
-IUSE="bash-completion crypt debug doc emacs nmbug python ruby test vim
+REQUIRED_USE="test? ( crypt emacs python )"
+IUSE="bash-completion crypt debug doc emacs nmbug python test vim
 	zsh-completion"
 
 CDEPEND="
-	>=dev-libs/glib-2.14
-	dev-libs/gmime:2.4
+	>=dev-libs/glib-2.22
+	|| ( dev-libs/gmime:2.4 dev-libs/gmime:2.6 )
 	dev-libs/xapian
 	doc? ( python? ( dev-python/sphinx ) )
 	sys-libs/talloc
 	debug? ( dev-util/valgrind )
 	emacs? ( >=virtual/emacs-23 )
-	ruby? ( dev-lang/ruby:1.8 )
 	x86? ( >=dev-libs/xapian-1.2.7-r2 )
 	vim? ( || ( >=app-editors/vim-7.0 >=app-editors/gvim-7.0 ) )
 	"
@@ -47,6 +44,7 @@ RDEPEND="${CDEPEND}
 
 DOCS=( AUTHORS NEWS README )
 SITEFILE="50${PN}-gentoo.el"
+MY_LD_LIBRARY_PATH="${WORKDIR}/${P}/lib"
 
 bindings() {
 	if use $1; then
@@ -67,14 +65,6 @@ pkg_setup() {
 src_prepare() {
 	default
 	bindings python distutils_src_prepare
-
-	r_fix() {
-		local pattern="\(find_library('notmuch', '[^']*', '\)\([^']*\)\(')\)"
-		local replace="\1${WORKDIR}/${PF}_build/lib\3"
-
-		sed -i "s|$pattern|$replace|" extconf.rb || die
-	}
-	bindings ruby r_fix
 }
 
 src_configure() {
@@ -94,12 +84,6 @@ src_compile() {
 	default
 	bindings python distutils_src_compile
 
-	r_make() {
-		${RUBY} extconf.rb || die
-		emake
-	}
-	bindings ruby r_make
-
 	if use doc; then
 		pydocs() {
 			pushd docs || die
@@ -107,14 +91,12 @@ src_compile() {
 			mv html ../python || die
 			popd || die
 		}
-
-		rdocs() {
-			${RDOC} --main 'Notmuch' --title 'Notmuch Ruby API' --op ruby *.c
-		}
-
-		LD_LIBRARY_PATH="${WORKDIR}/${PF}_build/lib" bindings python pydocs
-		bindings ruby rdocs
+		LD_LIBRARY_PATH="${MY_LD_LIBRARY_PATH}" bindings python pydocs
 	fi
+}
+
+src_test() {
+	LD_LIBRARY_PATH="${MY_LD_LIBRARY_PATH}" default
 }
 
 src_install() {
@@ -134,23 +116,15 @@ src_install() {
 	fi
 
 	DOCS="" bindings python distutils_src_install
-	bindings ruby emake DESTDIR="'${D}'" install
 
 	if use doc; then
 		bindings python dohtml -r python
-		bindings ruby dohtml -r ruby
 	fi
 }
 
 pkg_postinst() {
 	use emacs && elisp-site-regen
 	use python && distutils_pkg_postinst
-
-	if use python; then
-		echo
-		elog "Python API documentation is also available online at:"
-		elog "  http://packages.python.org/notmuch/"
-	fi
 }
 
 pkg_postrm() {
